adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,5 +10,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus quaerat earum quo doloribus molestiae voluptatibus eius. Vel, omnis! Explicabo eius aspernatur aliquam id impedit excepturi dolorum nostrum eligendi provident culpa.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, fuga. Unde suscipit architecto quod doloribus quo possimus, quasi libero aspernatur hic placeat odio illum quidem explicabo omnis reiciendis blanditiis eveniet?</p>
 </body>
 </html>
